Fix image path in howToUse.html

--- a/pages/howToUse.html
+++ b/pages/howToUse.html
@@ -139,7 +139,7 @@
                 <p>
                     Designed to support Computer Science students throughout their study journey.
                 </p>
-                <img src="../images/icons/steps.png" alt="" class="img-fluid">
+                <img src="images/icons/steps.png" alt="" class="img-fluid">
             </div>
 
             <div class="all-steps">
