--- a/pages/about.html
+++ b/pages/about.html
@@ -3,8 +3,36 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MA Library</title>
+    <meta name="content-language" content="en">
+    <meta name="referrer" content="strict-origin-when-cross-origin">
+
+    <title>About MA Library | Project Overview & Developer Information</title>
+
+    <meta name="description"
+        content="Learn more about MA Library, an educational library project created to organize college summaries and academic resources, including its goals, features, and development approach.">
+
+    <meta name="robots" content="index, follow">
+
+    <link rel="canonical" href="https://ma-reh.github.io/MA_Library/pages/about.html">
+
+    <meta name="theme-color" content="#0d6efd">
+
+    <meta property="og:title" content="About MA Library | Educational Project Overview">
+    <meta property="og:description"
+        content="Discover the purpose, vision, and development details behind MA Library, an educational platform for organizing academic resources and college summaries.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://ma-reh.github.io/MA_Library/pages/about.html">
+    <meta property="og:image" content="https://ma-reh.github.io/MA_Library/images/preview.png">
+    <meta property="og:site_name" content="MA Library">
+
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="About MA Library">
+    <meta name="twitter:description"
+        content="Explore the idea, goals, and development details of MA Library, an educational library project for students.">
+    <meta name="twitter:image" content="https://ma-reh.github.io/MA_Library/images/preview.png">
+
 
     <base href="../">
 
@@ -175,7 +203,8 @@
                     <div class="item">
                         <img src="images/icons/people.png" alt="Person MA Image" class="img-fluid mb-3">
                         <h4 class="mb-1">Mohamed Ayman (MÀ)</h4>
-                        <h6 class="mb-0 font-3">Front-End Developer | Computer Science & Artificial Intelligence Student</h6>
+                        <h6 class="mb-0 font-3">Front-End Developer | Computer Science & Artificial Intelligence Student
+                        </h6>
                     </div>
                 </div>
                 <div class="part py-2 col-lg-4">
