--- a/pages/categories.html
+++ b/pages/categories.html
@@ -3,8 +3,35 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MA Library</title>
+    <meta name="content-language" content="en">
+    <meta name="referrer" content="strict-origin-when-cross-origin">
+
+    <title>Categories | Browse Academic Book Categories - MA Library</title>
+
+    <meta name="description"
+        content="Browse academic book categories on MA Library, where educational resources and college summaries are organized by subject to help students find learning materials easily.">
+
+    <meta name="robots" content="index, follow">
+
+    <link rel="canonical" href="https://ma-reh.github.io/MA_Library/pages/categories.html">
+
+    <meta name="theme-color" content="#0d6efd">
+
+    <meta property="og:title" content="Book Categories | MA Library">
+    <meta property="og:description"
+        content="Explore organized academic book categories and college summaries on MA Library to quickly find educational resources by subject.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://ma-reh.github.io/MA_Library/pages/categories.html">
+    <meta property="og:image" content="https://ma-reh.github.io/MA_Library/images/preview.png">
+    <meta property="og:site_name" content="MA Library">
+
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="MA Library Categories">
+    <meta name="twitter:description"
+        content="Browse academic book categories and organized learning resources on MA Library.">
+    <meta name="twitter:image" content="https://ma-reh.github.io/MA_Library/images/preview.png">
 
     <base href="../">
 
@@ -282,7 +309,7 @@
             </div>
         </div>
     </footer>
-   
+
 
     <!-- Global Components -->
     <div class="popup" data-popup-name="nav" onclick="closePopup('nav')">
