--- a/pages/favorite.html
+++ b/pages/favorite.html
@@ -3,8 +3,35 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MA Library</title>
+    <meta name="content-language" content="en">
+    <meta name="referrer" content="strict-origin-when-cross-origin">
+
+    <title>Favorites | Saved Books & Resources - MA Library</title>
+
+    <meta name="description"
+        content="View and manage your favorite books and academic resources on MA Library, allowing quick access to saved educational content and college summaries.">
+
+    <meta name="robots" content="index, follow">
+
+    <link rel="canonical" href="https://ma-reh.github.io/MA_Library/pages/favorite.html">
+
+    <meta name="theme-color" content="#0d6efd">
+
+    <meta property="og:title" content="Favorite Books & Resources | MA Library">
+    <meta property="og:description"
+        content="Access your saved favorite books and academic resources on MA Library for faster and easier studying.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://ma-reh.github.io/MA_Library/pages/favorite.html">
+    <meta property="og:image" content="https://ma-reh.github.io/MA_Library/images/preview.png">
+    <meta property="og:site_name" content="MA Library">
+
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="MA Library Favorites">
+    <meta name="twitter:description"
+        content="Manage and access your favorite academic books and learning resources on MA Library.">
+    <meta name="twitter:image" content="https://ma-reh.github.io/MA_Library/images/preview.png">
 
     <base href="../">
 
@@ -136,7 +163,8 @@
                 Save important materials to your favorites to keep your study resources organized.
             </p>
             <div class="buttons mb-5">
-                <button class="btn btn-fav second mb-2 mb-lg-0" onclick="areYouSureAboutThat()">Clear All Favorites</button>
+                <button class="btn btn-fav second mb-2 mb-lg-0" onclick="areYouSureAboutThat()">Clear All
+                    Favorites</button>
                 <a href="pages/materials.html" class="btn btn-fav mb-2 mb-lg-0 ">Browse Materials</a>
             </div>
             <span class="text-favorite py-5">
