--- a/pages/materials.html
+++ b/pages/materials.html
@@ -3,8 +3,34 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MA Library</title>
+    <meta name="content-language" content="en">
+    <meta name="referrer" content="strict-origin-when-cross-origin">
+
+    <title>Study Materials | Academic Books & Resources - MA Library</title>
+
+    <meta name="description"
+        content="Explore educational study materials on MA Library, including academic books, college summaries, and organized learning resources designed to support students.">
+
+    <meta name="robots" content="index, follow">
+
+    <link rel="canonical" href="https://ma-reh.github.io/MA_Library/pages/materials.html">
+
+    <meta name="theme-color" content="#0d6efd">
+
+    <meta property="og:title" content="Study Materials | MA Library">
+    <meta property="og:description"
+        content="Browse academic study materials, books, and college summaries on MA Library to support your learning journey.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://ma-reh.github.io/MA_Library/pages/materials.html">
+    <meta property="og:image" content="https://ma-reh.github.io/MA_Library/images/preview.png">
+    <meta property="og:site_name" content="MA Library">
+
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="MA Library Study Materials">
+    <meta name="twitter:description" content="Find academic books, summaries, and learning materials on MA Library.">
+    <meta name="twitter:image" content="https://ma-reh.github.io/MA_Library/images/preview.png">
 
     <base href="../">
 
