--- a/pages/playlists.html
+++ b/pages/playlists.html
@@ -3,8 +3,34 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MA Library</title>
+    <meta name="content-language" content="en">
+    <meta name="referrer" content="strict-origin-when-cross-origin">
+
+    <title>Playlists | Organized Learning Paths - MA Library</title>
+
+    <meta name="description"
+        content="Explore curated educational playlists on MA Library, grouping academic materials and learning resources into organized study paths for students.">
+
+    <meta name="robots" content="index, follow">
+
+    <link rel="canonical" href="https://ma-reh.github.io/MA_Library/pages/playlists.html">
+
+    <meta name="theme-color" content="#0d6efd">
+
+    <meta property="og:title" content="Educational Playlists | MA Library">
+    <meta property="og:description"
+        content="Browse organized educational playlists and structured learning paths on MA Library.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://ma-reh.github.io/MA_Library/pages/playlists.html">
+    <meta property="og:image" content="https://ma-reh.github.io/MA_Library/images/preview.png">
+    <meta property="og:site_name" content="MA Library">
+
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="MA Library Playlists">
+    <meta name="twitter:description" content="Discover curated playlists and organized learning content on MA Library.">
+    <meta name="twitter:image" content="https://ma-reh.github.io/MA_Library/images/preview.png">
 
     <base href="../">
 
@@ -192,7 +218,7 @@
                                 aria-labelledby="playlists-All-tab" tabindex="0">
                                 <div class="parent data">
                                     <div class="row second-row playlistRowInsert" id="">
-                                        
+
                                     </div>
                                     <div class="indicators mt-4" id="indicators">
                                         <ul class="p-0 changeActives" type="none">
