--- a/pages/registration.html
+++ b/pages/registration.html
@@ -3,8 +3,35 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MA Library</title>
+    <meta name="content-language" content="en">
+    <meta name="referrer" content="strict-origin-when-cross-origin">
+
+    <title>Register | Create an Account - MA Library</title>
+
+    <meta name="description"
+        content="Create a new account on MA Library to access educational resources, save favorite materials, and personalize your learning experience.">
+
+    <meta name="robots" content="noindex, follow">
+
+    <link rel="canonical" href="https://ma-reh.github.io/MA_Library/pages/registration.html">
+
+    <meta name="theme-color" content="#0d6efd">
+
+    <meta property="og:title" content="Register on MA Library">
+    <meta property="og:description"
+        content="Sign up on MA Library to access academic resources, manage favorites, and enhance your learning experience.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://ma-reh.github.io/MA_Library/pages/registration.html">
+    <meta property="og:image" content="https://ma-reh.github.io/MA_Library/images/preview.png">
+    <meta property="og:site_name" content="MA Library">
+
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Register | MA Library">
+    <meta name="twitter:description"
+        content="Create your MA Library account to save learning materials and access educational resources.">
+    <meta name="twitter:image" content="https://ma-reh.github.io/MA_Library/images/preview.png">
 
     <base href="../">
 
@@ -15,13 +42,7 @@
     <link rel="stylesheet" href="css/plugins/owl.carousel.min.css">
     <link rel="stylesheet" href="css/plugins/owl.theme.default.css">
 
-
-
-
     <link rel="stylesheet" href="css/style.css">
-
-
-
 
     <link rel="shortcut icon" href="images/logo-bg-light.svg" type="image/x-icon">
 </head>
