--- a/index.html
+++ b/index.html
@@ -2,11 +2,42 @@
 <html lang="en">
 
 <head>
+    <!-- Basic -->
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MA Library</title>
+    <meta name="content-language" content="en">
+    <meta name="referrer" content="strict-origin-when-cross-origin">
+
+    <!-- SEO Core -->
+    <title>MA Library | Educational Books, College Summaries & Academic Resources</title>
+
+    <meta name="description"
+        content="MA Library is an educational library website that provides organized college summaries, academic books, and learning resources with a modern, responsive, and user-friendly design for students.">
+
+    <meta name="robots" content="index, follow">
+
+    <link rel="canonical" href="https://ma-reh.github.io/MA_Library/">
 
 
+    <meta name="theme-color" content="#0d6efd">
+
+    <meta property="og:title" content="MA Library | Educational Library for Students">
+    <meta property="og:description"
+        content="Explore MA Library, an educational platform offering college summaries, academic books, and organized learning resources with a modern responsive interface.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://ma-reh.github.io/MA_Library/">
+    <meta property="og:image" content="https://ma-reh.github.io/MA_Library/images/preview.png">
+    <meta property="og:site_name" content="MA Library">
+
+ 
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="MA Library | Educational Library">
+    <meta name="twitter:description"
+        content="Educational library website providing college summaries and academic learning resources for students.">
+    <meta name="twitter:image" content="https://ma-reh.github.io/MA_Library/images/preview.png">
+
+    <!-- CSS -->
     <link rel="stylesheet" href="css/plugins/swiper.min.css">
     <link rel="stylesheet" href="css/plugins/swiper-bundle.min.css">
     <link rel="stylesheet" href="css/plugins/all.min.css">
@@ -804,7 +835,7 @@
                     width="100%" height="100%" />
             </div>
         </div>
-    </div>  
+    </div>
 
     <!-- Plugins Src -->
     <script src="js/plugins/swiper-bundle.min.js"></script>
