--- a/pages/howToUse.html
+++ b/pages/howToUse.html
@@ -3,8 +3,34 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MA Library</title>
+    <meta name="content-language" content="en">
+    <meta name="referrer" content="strict-origin-when-cross-origin">
+
+    <title>How to Use MA Library | User Guide & Instructions</title>
+
+    <meta name="description"
+        content="Learn how to use MA Library step by step, including browsing categories, adding favorites, downloading resources, and navigating the educational platform easily.">
+
+    <meta name="robots" content="index, follow">
+
+    <link rel="canonical" href="https://ma-reh.github.io/MA_Library/pages/howToUse.html">
+
+    <meta name="theme-color" content="#0d6efd">
+
+    <meta property="og:title" content="How to Use MA Library | User Guide">
+    <meta property="og:description"
+        content="Step-by-step guide explaining how to use MA Library, browse academic categories, save favorites, and access educational resources.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://ma-reh.github.io/MA_Library/pages/howToUse.html">
+    <meta property="og:image" content="https://ma-reh.github.io/MA_Library/images/preview.png">
+    <meta property="og:site_name" content="MA Library">
+
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="How to Use MA Library">
+    <meta name="twitter:description" content="User guide explaining how to navigate and use MA Library effectively.">
+    <meta name="twitter:image" content="https://ma-reh.github.io/MA_Library/images/preview.png">
 
     <base href="../">
 
